upgrading to java21 / spark 4.0